<resources>
    <string name="app_name">Vifense</string>
    <string name="app_version">Ver.0.231227.1</string>
    <string name="app_running">Vifense 앱이 실행 중 입니다.</string>
    <string name="user_id">아이디</string>
    <string name="user_pwd">비밀번호</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <string name="confirm_pwd">비밀번호 확인</string>
    <string name="real_name">실명인증</string>
    <string name="belong_company">소속회사</string>
    <string name="user_conditions">[필수] 약관 전체 동의</string>
    <string name="view_conditions">약관 보기</string>
    <string name="verify_text">휴대폰(본인명의) 인증</string>
    <string name="verify_btn_text">휴대폰 인증</string>
    <string name="register_user">회원가입</string>
    <string name="vehicle_gauge">계기판</string>
    <string name="connect_text">연결</string>
    <string name="rank_unit_text">위</string>
    <string name="connecting_obd2_text">OBD2 연결 시도 중</string>
    <string name="connected_obd2_text">ECU 연결됨</string>
    <string name="connecting_error_text">장치 연결에 실패하였습니다.</string>
    <string name="non_connecting_text">장치 연결 되여있지 않습니다.</string>
    <string name="vehicle_diagnosis">차량진단</string>
    <string name="driving_record">주행기록</string>
    <string name="vehicle_management">차량관리</string>
    <string name="ranking_driving">주행 랭킹</string>
    <string name="car_mileage">주행 거리</string>
    <string name="safe_driving">안전 운전</string>
    <string name="received_msg">받은 메세지</string>
    <string name="unit_1">km/h</string>
    <string name="unit_2">%</string>
    <string name="unit_3">R/min</string>
    <string name="unit_4">km</string>
    <string name="unit_5">L/h</string>
    <string name="unit_6">L</string>
    <string name="unit_7">°C</string>
    <string name="unit_8">V</string>
    <string name="user_login">로그인</string>
    <string name="sign_up">가입하기</string>
    <string name="sign_name">이름</string>
    <string name="complete_text">완료</string>
    <string name="confirm_text">확인</string>
    <string name="cancel_text">취소</string>
    <string name="auth_code">인증번호</string>
    <string name="get_auth_number">인증번호 받기</string>
    <string name="new_password">신규 비밀번호</string>
    <string name="warning_text_1">회원 가입 시 등록한 이름과 ID가 같아야 문자 인증번호를 받을수 있습니다.</string>
    <string name="alarm_text_1">올바른 내용을 입력해 주세요.</string>
    <string name="alarm_text_2">인증이 완료 되였습니다.</string>
    <string name="success_signup_message1">가입이 완료 되었습니다.</string>
    <string name="success_signup_message2">새로 로그인 해 주세요.</string>
    <string name="alarm_text_3">비밀번호 수정 페이지로 이동합니다.</string>
    <string name="diagnosing_text">진단하기</string>
    <string name="diagnosing_completed">진단완료</string>
    <string name="current_trouble_code">현재 고장 코드</string>
    <string name="past_trouble_code">과거 고장 코드</string>
    <string name="confirm_reg_message">등록이 완료 되였습니다.</string>
    <string name="confirm_mod_message">변경이 완료 되였습니다.</string>
    <string name="error_pwd_message">비밀번호를 다시 입력하세요.</string>
    <string name="check_network_error">서버에 접속할수 없습니다.</string>
    <string name="error_auth">휴대폰 인증을 하여야 합니다.</string>
    <string name="error_login">가입하지 않은 ID입니다.  회원가입을 먼저 하십시오</string>
    <string name="error_password">로그인 정보가 정확 하지 않습니다.</string>
    <string name="error_signup_duplicate">이미 등록된 사용자 입니다.</string>
    <string name="error_signup_fail">사용자 등록에 실패 하였습니다.</string>
    <string name="error_save_db">디비 저장에 실패 하였습니다.</string>
    <string name="error_modify_fail">변경이 실패 하였습니다.</string>
    <string name="error_reg_car_duplicate">이미 등록된 차량 입니다.</string>
    <string name="show_reg_car">차량 등록을 진행 해 주세요.</string>
    <string name="error_reg_car_fail">차량 등록에 실패 하였습니다.</string>
    <string name="error_mod_car_fail">차량 정보 수정에 실패 하였습니다.</string>
    <string name="error_del_car_fail">차량 정보 삭제에 실패 하였습니다.</string>
    <string name="error_input_pwd">비밀번호가 일치하지 않습니다.</string>
    <string name="error_view_conditions">이용약관을 확인하십시오.</string>
    <string name="error_input_auth_code">인증번호 확인 시간이 지났습니다.</string>
    <string name="disconnect_bluetooth_msg">블루투스 연결을 끊으시겠습니까?</string>
    <string name="error_verify_phone">휴대폰 인증이 실패하였습니다.</string>
    <string name="error_modify_pwd">비밀번호 변경이 실패하였습니다.</string>
    <string name="error_other_login">입력한 아이디와 비밀번호가 등록된 정보와 일치하지 않습니다.</string>
    <string name="error_equal_name_id">입력한 이름과 ID가 회원가입시 등록한 내용과 일치하지 않습니다.</string>
    <string name="error_ecu_socket">ECU 소켓 연결이 실패하였습니다. 먼저 OBD2 장치가 정확히 연결 되였는지 확인 하십시오.</string>
    <string name="error_login_id">아이디를 입력하십시오.</string>
    <string name="error_login_pwd">비밀번호를 입력하십시오</string>
    <string name="error_sel_company">소속사 정보가 없습니다.</string>
    <string name="loading_obd_data">데이터를 읽어 들이는 중입니다.</string>
    <string name="send_driving_data">주행 정보를 서버로 전송 하였습니다.</string>
    <string name="mileage_month">월 주행 거리</string>
    <string name="mileage_today">오늘 주행 거리</string>
    <string name="driving_month_time">월 주행 시간</string>
    <string name="driving_today_time">오늘 주행 시간</string>
    <string name="driving_time">주행 시간</string>
    <string name="unit_year">년</string>
    <string name="unit_month">월</string>
    <string name="unit_day">일</string>
    <string name="unit_hour">시간</string>
    <string name="unit_minute">분</string>
    <string name="unit_second">초</string>
    <string name="unit_score">위</string>
    <string name="unit_count">회</string>
    <string name="region_start">출발지</string>
    <string name="region_end">도착지</string>
    <string name="my_info">내 정보</string>
    <string name="my_info_mod">내 정보 수정</string>
    <string name="my_name">성명</string>
    <string name="my_agency">소속사</string>
    <string name="my_id">ID</string>
    <string name="register_car_info">차량 정보 등록하기</string>
    <string name="register_car_text">차량 정보 등록</string>
    <string name="modify_car_text">차량 정보 수정</string>
    <string name="manufacturer_text">제조사</string>
    <string name="model_name">모델명</string>
    <string name="manufacturing_date">연식</string>
    <string name="car_number">차량 번호</string>
    <string name="fuel_type">연료 종류</string>
    <string name="displacement_text">배기량(cc)</string>
    <string name="register_text">등록하기</string>
    <string name="modify_text">수정하기</string>
    <string name="delete_text">삭제하기</string>
    <string name="year_unit">년식</string>
    <string name="gas_unit">cc</string>
    <string name="gauge_menu1">속도</string>
    <string name="gauge_menu2">엔진 부하</string>
    <string name="gauge_menu3">RPM</string>
    <string name="gauge_menu4">주행 거리</string>
    <string name="gauge_menu5">순간 연료 소모량</string>
    <string name="gauge_menu6">연료 소모량</string>
    <string name="gauge_menu7">냉각수 온도</string>
    <string name="gauge_menu8">배터리 전압</string>
    <string name="gauge_menu9">주행 시간</string>
    <string name="gauge_menu10">평균 속도</string>
    <string name="gauge_menu11">과속</string>
    <string name="gauge_menu12">급가속</string>
    <string name="gauge_menu13">급제동</string>
    <string name="add_gauge_text">추가</string>
    <string name="today_text">당일</string>
    <string name="before_day_text">전일</string>
    <string name="driving_detail_text">운전 상세정보</string>
    <string name="driving_safety_text">안전운전(스코어링)방법</string>
    <string name="link_text">연결</string>
    <string name="link_method_text">연결 방식</string>
    <string name="link_setting_text">연결 설정</string>
    <string name="link_paired_text">등록된 디바이스</string>
    <string name="link_nopaired_text">연결 가능한 디바이스</string>
    <string name="bluetooth_permission_nodevice">이 기기에서는 블루투스장치를 지원하지 않습니다.</string>
    <string name="show_error_idle">장시간 공회전 중 입니다</string>
    <string name="show_error_fast">과속 중 입니다. 속도를 줄이세요.</string>
    <string name="show_error_quick">천천히 가속하세요.</string>
    <string name="show_error_brake">천천히 운전하세요.</string>
    <string name="show_error_system">시스템 진단이 필요합니다.</string>
    <string name="show_error_consume">소모품 교체가 필요합니다.</string>
    <string name="non_trouble_codes">진단 결과 고장내역이 없습니다.</string>
    <string name="delete_message_title">메시지 삭제</string>
    <string name="delete_all_message">받은 메세지를 모두 삭제하시겠습니까?</string>
    <string name="no_start_place">출발지 정보가 없습니다.</string>
    <string name="no_end_place">도착지 정보가 없습니다.</string>
    <string name="hint_auth_name">이름 : 먼저 휴대폰 인증을 해주세요.</string>
    <string name="hint_auth_phone">아이디 : 휴대폰 인증 후 자동입력 됩니다.</string>
    <string name="bt_link_title">블루투스 연결</string>
    <string name="bt_link_content">시동이 걸린 상태에서 정상적인 서비스가 가능 합니다. 기능이 제대로 작동하지 않을 경우 우선 시동이 제대로 걸려 있는지 확인 하시기 바랍니다.</string>
    <string name="bt_link_question">OBD를 연결 하시겠습니까?</string>
    <string name="week_1">일</string>
    <string name="week_2">월</string>
    <string name="week_3">화</string>
    <string name="week_4">수</string>
    <string name="week_5">목</string>
    <string name="week_6">금</string>
    <string name="week_7">토</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="safe_driving_scoring1">시속 110Km 이상 5분 이상 주행 시 : 감점 -2점, 1일 최대 -4점 감점</string>
    <string name="safe_driving_scoring2">근무 당일 평균 주행속도 50Km 이내 시 : 가점 +1점</string>
    <string name="safe_driving_scoring3">급가속, 급제동(1초에 15Km이상) 30회당 : -1점, 1일 최대 -2점</string>
    <string name="safe_driving_scoring4">기본 100점에서 차감 제도로 운영</string>
    <string name="finish_app">\'뒤로\' 버튼을 한번 더 누르면 종료 됩니다.</string>
    <string name="permission_failue">저장소 권한이 거부 되었습니다. 앱을 다시 실행 하여 저장소 권한을 허용해주세요.</string>
    <string name="permission_failue1">저장소 권한이 거부되였습니다.</string>
    <string name="permission_storage_title">저장소 권한 설정</string>
    <string name="permission_storage_content">저장소 권한을 허용해주세요.</string>
    <string name="car_name_1">기아</string>
    <string name="car_name_2">르노삼성</string>
    <string name="car_name_3">쉐보레</string>
    <string name="car_name_4">쌍용</string>
    <string name="car_name_5">현대</string>
    <string name="car_name_6">제네시스</string>
    <string name="car_name_7">BMW</string>
    <string name="car_name_8">DR</string>
    <string name="car_name_9">DS</string>
    <string name="car_name_10">FAW</string>
    <string name="car_name_11">GEELY</string>
    <string name="car_name_12">GMC</string>
    <string name="car_name_13">GWM</string>
    <string name="car_name_14">HAVAL</string>
    <string name="car_name_15">JAC</string>
    <string name="car_name_16">KMT</string>
    <string name="car_name_17">MG</string>
    <string name="car_name_18">ORA</string>
    <string name="car_name_19">RAM</string>
    <string name="car_name_20">WEY</string>
    <string name="car_name_21">닛산</string>
    <string name="car_name_22">다이하쓰</string>
    <string name="car_name_23">다치아</string>
    <string name="car_name_24">닷선</string>
    <string name="car_name_25">닷지</string>
    <string name="car_name_26">대우</string>
    <string name="car_name_27">도요타</string>
    <string name="car_name_28">라다</string>
    <string name="car_name_29">란치아</string>
    <string name="car_name_30">람보르기니</string>
    <string name="car_name_31">랜드로버</string>
    <string name="car_name_32">레이본</string>
    <string name="car_name_33">랙서스</string>
    <string name="car_name_34">로버</string>
    <string name="car_name_35">로터스</string>
    <string name="car_name_36">롤스로이스</string>
    <string name="car_name_37">르노</string>
    <string name="car_name_38">리지에</string>
    <string name="car_name_39">리판</string>
    <string name="car_name_40">링컨</string>
    <string name="car_name_41">마세라티</string>
    <string name="car_name_42">마쓰다</string>
    <string name="car_name_43">마힌드라</string>
    <string name="car_name_44">맥라렌</string>
    <string name="car_name_45">머큐리</string>
    <string name="car_name_46">메르세데스-벤츠</string>
    <string name="car_name_47">미니</string>
    <string name="car_name_48">미츠비시</string>
    <string name="car_name_49">벤틀리</string>
    <string name="car_name_50">보그바르트</string>
    <string name="car_name_51">복스홀</string>
    <string name="car_name_52">볼보</string>
    <string name="car_name_53">부가티</string>
    <string name="car_name_54">뷰익</string>
    <string name="car_name_55">사브</string>
    <string name="car_name_56">사이언</string>
</resources>