<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FindPwdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/pretendard_semibold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/find_pwd"
                    android:textColor="@color/title_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/multiAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:text="@string/warning_text_1"
                    android:textColor="@color/title_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/find_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_text"
                    android:ems="10"
                    android:fontFamily="@font/pretendard_regular"
                    android:hint="@string/sign_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/find_id_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/input_text"
                    android:ems="10"
                    android:fontFamily="@font/pretendard_regular"
                    android:hint="@string/user_id"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:id="@+id/auth_code_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button2" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:fontFamily="@font/pretendard_semibold"
                        android:text="@string/real_name"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </FrameLayout>

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.9">

            <LinearLayout
                android:id="@+id/setting_new_pwd_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/find_new_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/input_text"
                        android:ems="10"
                        android:fontFamily="@font/pretendard_regular"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/text_color"
                        android:textSize="18sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/find_new_pwd_conf"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/input_text"
                        android:ems="10"
                        android:fontFamily="@font/pretendard_regular"
                        android:hint="@string/confirm_pwd"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/text_color"
                        android:textSize="18sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp">

                        <ImageView
                            android:id="@+id/find_pwd_complete_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button2" />

                        <TextView
                            android:id="@+id/textView46"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:fontFamily="@font/pretendard_semibold"
                            android:text="@string/complete_text"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </FrameLayout>

                </FrameLayout>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>